# sgm

./: 0.exr  CMakeLists.txt  README.md  convert_img.py  copy_file.m  depth.m  evaluate.m  feature1.fig  getGTruth.m  make.m  rectify.m  resize_result.m  sgmStereoMex.cpp  sgmStereoMex.mexa64  sgmerror  sgmstereo  test.m  test.m~  test.ppm  test_kitti.m
tools/: convert.sh  convert_img.py  convert_kinect.py  rectify.m  resize_result.m
